--- a/config.toml
+++ b/config.toml
@@ -15,10 +15,16 @@ disqusShortname = ""      # disqus_shortname
 googleAnalytics = "UA-139517916-1"      # UA-XXXXXXXX-X
 copyright = ""            # default: author.name ↓        # 默认为下面配置的author.name ↓
 
+# Highlight options. See https://gohugo.io/content-management/syntax-highlighting/
+pygmentsCodeFences = true # Enable syntax highlighting with GitHub flavoured code fences
+pygmentsUseClasses = true # Use CSS classes to format highlighted code
+pygmentsCodefencesGuessSyntax = false
+pygmentsOptions = "linenos=table"
+
 # language support # en / zh-cn / other... translations present in i18n/
-defaultContentLanguage = "en"           # Default language to use
-[languages.en]
-  languageCode = "en"
+# defaultContentLanguage = "zh-cn"           # Default language to use
+# [languages.zh-cn]
+#   languageCode = "zh-cn"
 
 [author]                  # essential                     # 必需
   name = "dx"
